--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,14 +1,37 @@
 .card {
-  border: 2px solid black;
+  padding: 1rem;
+  background-color: whitesmoke;
+  box-shadow: 2px 2px 2px grey;
   width: 200px;
+  height: 300px;
   display: flex;
   flex-direction: column;
-
-  &__heading {
-    font-size: 1rem;
-  }
+  justify-content: space-around;
+  align-items: center;
 
   &__image {
     height: 250px;
+  }
+
+  &__hidden {
+    position: absolute;
+    padding: 1rem;
+    display: none;
+    color: white;
+    width: 200px;
+    height: 300px;
+    background-color: rgb(0, 0, 0, 0.7);
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+
+    .hidden__heading {
+      font-size: 1rem;
+    }
+  }
+
+  &:hover > &__hidden {
+    display: flex;
   }
 }
