--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -1,3 +1,7 @@
-$color-primary: #b0bdf8;
+// $color-primary: #b0bdf8;
+// $color-secondary: #313e78;
+// $text-primary: #555b78;
+
+$color-primary: #d9b00b;
 $color-secondary: #313e78;
-$text-primary: #555b78;
+$text-primary: #cd7a00;
