--- a/src/containers/Main/Main.scss
+++ b/src/containers/Main/Main.scss
@@ -1,7 +1,7 @@
 @use "../../assets/sass/variables" as *;
 
 .main {
-  //   background-color: $color-secondary;
+  background-color: $color-secondary;
   background-image: linear-gradient(
     to bottom right,
     $color-primary,
