--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -1,6 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Chelsea+Market&family=Londrina+Solid&display=swap");
+
 // $color-primary: #b0bdf8;
 // $color-secondary: #313e78;
 // $text-primary: #555b78;
+
+$primary-font: "Chelsea Market", cursive;
+$secondary-font: "Londrina Solid", cursive;
 
 $color-primary: #d9b00b;
 $color-secondary: #313e78;
