--- a/src/containers/Navbar/Navbar.scss
+++ b/src/containers/Navbar/Navbar.scss
@@ -3,17 +3,24 @@
 .navbar {
   z-index: 1;
   position: fixed;
-  top: 0;
   background-color: whitesmoke;
   box-shadow: inset 1px 1px 10px $color-secondary, 0 1px 2px $color-secondary;
   height: 15vh;
   width: 100%;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 0.4rem;
   align-items: center;
 
   .heading {
-    font-size: 2.4rem;
+    font-family: $primary-font;
+    height: 100%;
+    font-size: 1.8rem;
+    writing-mode: vertical-lr;
+    text-align: center;
+    &--right {
+      transform: rotate(180deg);
+    }
   }
 }
