--- a/src/containers/Navbar/Navbar.scss
+++ b/src/containers/Navbar/Navbar.scss
@@ -4,7 +4,7 @@
   z-index: 1;
   position: fixed;
   background-color: whitesmoke;
-  box-shadow: inset 1px 1px 10px $color-secondary, 0 1px 2px $color-secondary;
+  box-shadow: inset 1px 1px 10px $card-secondary, 0 1px 2px $card-secondary;
   height: 15vh;
   width: 100%;
   display: flex;
